Fixed behaviour of the sidenav menu.  It now is open all the time on larger devices, and on smaller devices, it auto-closes when an item is selected.

--- a/src/app/stations/stations.component.scss
+++ b/src/app/stations/stations.component.scss
@@ -6,6 +6,9 @@
   display: inline-block;
   background-color: white;
   overflow: clip;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
 }
 
 .station-id {
